Change the argLine of `maven-surefire-plugin` to fix ExecutionException